--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             [
               ["Name", el.name],
               ["Category", el.category],
-              ["Example 1", el.example1]
+              ["Example", el.example1]
             ].forEach(([label,value])=>{
               const lbl = document.createElement("div");
               lbl.className = "label";
