--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       text-align: center;
       background-color: #f9f9f9;
       margin: 20px;
+      transform: scale(0.9);
+      transform-origin: top center;
     }
 
     .container {
@@ -148,6 +150,14 @@
       border-color: #f1c40f;
       box-shadow: 0 2px 8px rgba(241,196,15,0.5);
     }
+
+    .footer-logo {
+      margin-top: 40px;
+    }
+
+    .footer-logo img {
+      height: 80px;
+    }
   </style>
 </head>
 <body>
@@ -169,6 +179,12 @@
       <div style="grid-column: span 2">Hover or click a card to see details here.</div>
       <div></div><div></div><div></div><div></div><div></div>
     </div>
+
+    <!-- FOOTER LOGO -->
+    <div class="footer-logo">
+      <img src="DHIT_logo.png" alt="Company Logo">
+    </div>
+
   </div>
 
   <script>
