--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
     .table {
       display: grid;
-      grid-template-columns: repeat(17, 85px);
-      grid-template-rows: repeat(7, 85px);
+      grid-template-columns: repeat(17, 95px);
+      grid-template-rows: repeat(7, 95px);
       gap: 5px;
       margin-bottom: 20px;
     }
 
     .flip-card {
-      width: 85px;
-      height: 85px;
+      width: 95px;
+      height: 95px;
       perspective: 1000px;
       border: 2px solid transparent;
       position: relative;
@@ -64,22 +64,23 @@
     }
 
     .flip-card-front,
-    .flip-card-back {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      backface-visibility: hidden;
-      -webkit-backface-visibility: hidden;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 4px;
-      font-weight: bold;
-      color: white;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-    }
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  /* vertical center */
+  align-items: center;      /* horizontal center */
+  padding: 4px;             /* minimal padding to prevent cutoffs */
+  font-weight: bold;
+  color: white;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
+
 
     .flip-card-front {
       font-size: 12px;
@@ -95,16 +96,8 @@
       top: 2px;
       left: 4px;
       font-size: 12px;
+      font-weight: bold;
     }
-    .name {
-      font-size: 10px;
-      text-align: center;
-      padding: 0 2px;
-      word-break: break-word;
-      line-height: 1.1;
-      max-height: 28px;
-      overflow: hidden;
-}
 
     .symbol {
       font-size: 16px;
@@ -113,6 +106,13 @@
 
     .name {
       font-size: 10px;
+      text-align: center;
+      padding: 0 2px;
+      word-break: break-word;
+      line-height: 1.1;
+      max-height: none;
+      overflow: hidden;
+      max-width: 90%;
     }
 
     .percentages {
@@ -160,11 +160,11 @@
       box-shadow: 0 2px 8px rgba(241,196,15,0.5);
     }
 
-.logo-below-title img {
-  height: 120px;
-  max-width: 100%;
-  object-fit: contain;
-}
+    .logo-below-title img {
+      height: 120px;
+      max-width: 100%;
+      object-fit: contain;
+    }
   </style>
 </head>
 <body>
@@ -189,8 +189,6 @@
       <div style="grid-column: span 2">Hover over or click a card to see details here.</div>
       <div></div><div></div><div></div><div></div><div></div>
     </div>
-
-    <!-- FOOTER LOGO -->
 
   </div>
 
@@ -231,12 +229,14 @@
       6:[5,11,17,21,25,29,33,37,41,45,50,55,61,67,73,80,87],
       7:[6,12,18,22,26,30,34,38,42,46,51,56,62,68,74,81,88]
     };
+
     function getColumn(n){
       for(let c=1;c<=17;c++){
         if(colsMap[c].includes(n)) return c;
       }
       return 1;
     }
+
     function getRow(n){
       for(let r=1;r<=7;r++){
         if(rowsMap[r].includes(n)) return r;
@@ -268,7 +268,7 @@
 
     function resetInfo() {
       infoBox.innerHTML = `
-        <div style="grid-column: span 2">Hover or click a card to see details here.</div>
+        <div style="grid-column: span 2">Hover over or click a card to see details here.</div>
         <div></div><div></div><div></div><div></div><div></div>
       `;
       infoBox.classList.remove("highlight");
