--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Periodic Table of Health Elements</title>
+<img src = "DHIT_logo.png"></img>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Inter', Arial, sans-serif;
       text-align: center;
       background-color: #f9f9f9;
       margin: 20px;
@@ -64,32 +66,25 @@
     }
 
     .flip-card-front,
-.flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;  
-  align-items: center;      
-  padding: 4px;            
-  font-weight: bold;
-  color: white;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-}
-
-
-    .flip-card-front {
-      font-size: 12px;
-    }
-
     .flip-card-back {
-      transform: rotateY(180deg);
-      font-size: 10px;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 4px;
+      font-weight: bold;
+      color: white;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+      backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
     }
+
+    .flip-card-front { font-size: 12px; }
+    .flip-card-back  { font-size: 10px; transform: rotateY(180deg); }
 
     .top-left-number {
       position: absolute;
@@ -99,196 +94,261 @@
       font-weight: bold;
     }
 
-    .symbol {
-      font-size: 16px;
-      margin-bottom: 4px;
-    }
+    .symbol { font-size: 16px; margin-bottom: 4px; }
 
     .name {
-  font-size: 10px;
-  text-align: center;
-  line-height: 1.2;
-  padding: 0 2px;
-  word-break: normal; 
-  white-space: normal;
-  max-height: none;
-  hyphens: auto;
-}
-
-
-    .percentages {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin-top: 20px;
-    }
-
-    .category {
-      padding: 8px 12px;
-      color: white;
-      border-radius: 4px;
-      font-size: 14px;
+      font-size: 10px;
+      text-align: center;
+      line-height: 1.2;
+      padding: 0 2px;
+      word-break: normal;
+      white-space: normal;
+      max-height: none;
+      hyphens: auto;
     }
 
     .info-card {
-      background: linear-gradient(135deg,#fff 0%,#e9e9e9 100%);
-      border: 2px solid #bbb;
-      border-radius: 8px;
-      color: #333;
-      padding: 15px 20px;
-      font-size: 16px;
+      width: 1600px;
+      min-height: 160px;
+      margin-top: 40px;
+      padding: 30px 0;
+      background-color: #ffffff;
+      border: 4px solid #ddd;
+      display: flex;
+      flex-direction: row;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      transition: background-color 0.3s, border-color 0.3s;
+    }
+
+    .info-left, .info-right {
+      width: 45%;
+      padding: 0 30px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .info-left {
+      text-align: right;
+      align-items: flex-end;
+      border-right: 1px solid #ccc;
+    }
+
+    .info-right {
       text-align: left;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-      overflow-y: auto;
-      min-height: 120px;
-      margin-top: 50px;
-      width: 700px;
-      display: grid;
-      grid-template-columns: auto 1fr;
-      grid-template-rows: repeat(3, auto);
-      gap: 8px 16px;
+      align-items: flex-start;
     }
 
-    .info-card .label {
-      font-weight: bold;
-      text-decoration: underline;
-      font-size: 18px;
+    .info-separator {
+      width: 1px;
+      height: 100px;
+      background-color: #ccc;
     }
 
-    .info-card.highlight {
-      background: #fefbd8;
-      border-color: #f1c40f;
-      box-shadow: 0 2px 8px rgba(241,196,15,0.5);
+    .info-category {
+      text-transform: uppercase;
+      font-size: 28px;
+      font-weight: bolder;
+      color: #505871 !important;
+      margin-bottom: 6px;
     }
 
-    .logo-below-title img {
-      height: 120px;
-      max-width: 100%;
-      object-fit: contain;
+    .info-name {
+      font-size: 22px;
+      font-weight: 700;
+      color: #505871 !important;
+      padding: 8px 16px;
+      border-radius: 6px;
+      background-color: rgba(255,255,255,0.2);
+      box-shadow: 0 1px 3px rgba(0,0,0,0.2);
     }
+
+    .info-example-label {
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 1.6px;
+  text-transform: uppercase;
+  color: #a2acbd; /* softer gray from design */
+  margin-bottom: 4px;
+}
+
+
+    .info-example {
+  font-size: 22px;
+  color: #505871 !important;
+  white-space: pre-wrap;
+}
+
   </style>
 </head>
 <body>
-  <div class="logo-below-title">
-    <img src="DHIT_logo.png" alt="Company Logo">
-  </div>
-  <h1>Periodic Table of Health Elements</h1>
-  
-  <div class="container">
+  <h1>Periodic Table of Health Elements&trade;</h1>
 
+  <div class="container">
     <div class="table" id="health-table"></div>
 
-    <div class="percentages">
-      <div class="category" style="background-color:#4A90E2">Medical Care 11%</div>
-      <div class="category" style="background-color:#7ED321">Environment 7%</div>
-      <div class="category" style="background-color:#F5A623">Individual Behavior 38%</div>
-      <div class="category" style="background-color:#9013FE">Genetics & Biology 22%</div>
-      <div class="category" style="background-color:#D0021B">Socio-economic 24%</div>
-    </div>
-
     <div class="info-card" id="info-box">
-      <div style="grid-column: span 2">Hover over or click a card to see details here.</div>
-      <div></div><div></div><div></div><div></div><div></div>
+      <div class="info-left">
+        <div id="info-category" class="info-category"></div>
+        <div id="info-name" class="info-name">Hover over or click a card to see details here.</div>
+      </div>
+      <div class="info-separator"></div>
+      <div class="info-right">
+        <div id="info-example-label" class="info-example-label">Example</div>
+        <div id="info-example" class="info-example"></div>
+      </div>
     </div>
-
   </div>
 
   <script>
-    const categoryColors = {
-      medical:    "#4A90E2",
-      environment:"#7ED321",
-      individual: "#F5A623",
-      genetics:   "#9013FE",
-      socio:      "#D0021B"
-    };
+   const colsMap = {
+  1: [1,2,3,4,5,6],
+  2: [7,8,9,10,11,12],
+  3: [13,14,15,16,17,18],
+  4: [19,20,21,22],
+  5: [23,24,25,26],
+  6: [27,28,29,30],
+  7: [31,32,33,34],
+  8: [35,36,37,38],
+  9: [39,40,41,42],
+  10: [43,44,45,46,47],
+  11: [48,49,50,51,52],
+  12: [53,54,55,56,57],
+  13: [58,59,60,61,62],
+  14: [63,64,65,66,67,68],
+  15: [69,70,71,72,73,74],
+  16: [75,76,77,78,79,80,81],
+  17: [82,83,84,85,86,87,88,89]
+};
 
-    function normCat(raw) {
-      const lc = (raw||"").toLowerCase();
-      if (lc.includes("medical"))    return "medical";
-      if (lc.includes("environment"))return "environment";
-      if (lc.includes("individual")) return "individual";
-      if (lc.includes("genetics"))   return "genetics";
-      if (lc.includes("socio"))      return "socio";
-      return "medical";
-    }
 
-    const colsMap = {
-      1:[1,2,3,4,5,6],2:[7,8,9,10,11,12],3:[13,14,15,16,17,18],
-      4:[19,20,21,22],5:[23,24,25,26],6:[27,28,29,30],
-      7:[31,32,33,34],8:[35,36,37,38],9:[39,40,41,42],
-      10:[43,44,45,46],11:[47,48,49,50,51],12:[52,53,54,55,56],
-      13:[57,58,59,60,61,62],14:[63,64,65,66,67,68],
-      15:[69,70,71,72,73,74],16:[75,76,77,78,79,80,81],
-      17:[82,83,84,85,86,87,88]
-    };
-    const rowsMap = {
-      1:[75,82],
-      2:[1,7,13,57,63,69,76,83],
-      3:[2,8,14,47,52,58,64,70,77,84],
-      4:[3,9,15,19,23,27,31,35,39,43,48,53,59,65,71,78,85],
-      5:[4,10,16,20,24,28,32,36,40,44,49,54,60,66,72,79,86],
-      6:[5,11,17,21,25,29,33,37,41,45,50,55,61,67,73,80,87],
-      7:[6,12,18,22,26,30,34,38,42,46,51,56,62,68,74,81,88]
-    };
+
+const rowsMap = {
+  1: [75,82],
+  2: [1,7,13,63,69,76,83],
+  3: [2,8,14,43,48,53,58,64,70,77,84],
+  4: [3,9,15,19,23,27,31,35,39,44,49,54,59,65,71,78,85],
+  5: [4,10,16,20,24,28,32,36,40,45,50,55,60,66,72,79,86],
+  6: [5,11,17,21,25,29,33,37,41,46,51,56,61,67,73,80,87],
+  7: [6,12,18,22,26,30,34,38,42,47,52,57,62,68,74,81,88,89]
+};
+
+
 
     function getColumn(n){
-      for(let c=1;c<=17;c++){
-        if(colsMap[c].includes(n)) return c;
-      }
+      for(let c=1;c<=17;c++){ if(colsMap[c].includes(n)) return c; }
       return 1;
     }
 
     function getRow(n){
-      for(let r=1;r<=7;r++){
-        if(rowsMap[r].includes(n)) return r;
-      }
+      for(let r=1;r<=7;r++){ if(rowsMap[r].includes(n)) return r; }
       return 1;
     }
 
-    const table   = document.getElementById("health-table");
+    const categoryColors = {
+      medical: "#44a2e6",
+      environment: "#7cc25d",
+      individual: "#f27f00",
+      genetics: "#7359b7",
+      socio: "#d6280b"
+    };
+    const hoverColors = {
+  medical: "#e1f3ff",
+  environment: "#e9f9e1",
+  individual: "#fdefe5",
+  genetics: "#f7f4ff",
+  socio: "#fee6e3"
+};
+    function darkenColor(hex, percent) {
+  const num = parseInt(hex.replace('#',''), 16);
+  const amt = Math.round(2.55 * percent);
+  const R = (num >> 16) - amt;
+  const G = (num >> 8 & 0x00FF) - amt;
+  const B = (num & 0x0000FF) - amt;
+  return '#' + (
+    0x1000000 +
+    (Math.max(0,R)<<16) +
+    (Math.max(0,G)<<8) +
+    Math.max(0,B)
+  ).toString(16).slice(1);
+}
+
+
+    function normCat(raw) {
+      const lc = (raw || "").toLowerCase();
+      if (lc.includes("medical")) return "medical";
+      if (lc.includes("environment")) return "environment";
+      if (lc.includes("individual")) return "individual";
+      if (lc.includes("genetics")) return "genetics";
+      if (lc.includes("socio")) return "socio";
+      return "medical";
+    }
+
+    const table = document.getElementById("health-table");
     const infoBox = document.getElementById("info-box");
     let lockedElement = null;
 
     function populateInfo(el) {
-      infoBox.innerHTML = "";
-      [
-        ["Name", el.name],
-        ["Category", el.category],
-        ["Example", el.example1]
-      ].forEach(([label,value])=>{
-        const lbl = document.createElement("div");
-        lbl.className = "label";
-        lbl.textContent = label;
-        const val = document.createElement("div");
-        val.textContent = value;
-        infoBox.appendChild(lbl);
-        infoBox.appendChild(val);
-      });
-      infoBox.classList.add("highlight");
-    }
+  const key = normCat(el.category);
+  const clrBox = categoryColors[key]
+  const clr = hoverColors[key];
+
+  // Set category text
+  document.getElementById('info-category').textContent = el.category.toUpperCase();
+  document.getElementById('info-category').style.color = '#505871';
+
+
+  // Set name and apply colored background styling
+  const nameBox = document.getElementById('info-name');
+  nameBox.textContent = el.name;
+  nameBox.style.backgroundColor = clrBox;
+  nameBox.style.boxShadow = '0 1px 3px rgba(0,0,0,0.2)';
+  nameBox.style.padding = '8px 16px';
+  nameBox.style.borderRadius = '6px';
+  nameBox.style.color = '#505871';
+
+  // Set example label and text
+  document.getElementById('info-example-label').textContent = 'Example';
+  document.getElementById('info-example').textContent = el.example1;
+
+  // Set background and border color of the info box
+  infoBox.style.backgroundColor = clr;
+  infoBox.style.borderColor = clr;
+}
+
 
     function resetInfo() {
-      infoBox.innerHTML = `
-        <div style="grid-column: span 2">Hover over or click a card to see details here.</div>
-        <div></div><div></div><div></div><div></div><div></div>
-      `;
-      infoBox.classList.remove("highlight");
-    }
+  document.getElementById('info-category').textContent = '';
+
+  const nameBox = document.getElementById('info-name');
+  nameBox.textContent = 'Hover over or click a card to see details here.';
+  nameBox.style.backgroundColor = 'transparent';
+  nameBox.style.boxShadow = 'none';
+  nameBox.style.color = '#505871';
+  nameBox.style.padding = '0';  
+  nameBox.style.borderRadius = '0'; 
+
+  document.getElementById('info-example-label').textContent = '';
+  document.getElementById('info-example').textContent = '';
+  infoBox.style.backgroundColor = '#ffffff';
+  infoBox.style.borderColor = '#ddd';
+}
+resetInfo();
+
+
 
     fetch('./elements_data_min.json')
-      .then(res=>{
-        if(!res.ok) throw new Error(`HTTP ${res.status}`);
-        return res.json();
-      })
-      .then(elements=>{
-        elements.forEach(el=>{
-          if(!el.symbol) return;
-          const key  = normCat(el.category);
-          const clr  = categoryColors[key];
-          const card = document.createElement("div");
-          card.className = "flip-card";
+      .then(res => res.json())
+      .then(elements => {
+        elements.forEach(el => {
+          const key = normCat(el.category);
+          const clr = categoryColors[key];
+          const clr2 = hoverColors[key]
+          const card = document.createElement('div');
+          card.className = 'flip-card';
           card.style.gridColumn = getColumn(el.number);
-          card.style.gridRow    = getRow(el.number);
+          card.style.gridRow = getRow(el.number);
+
           card.innerHTML = `
             <div class="flip-card-inner">
               <div class="flip-card-front" style="background-color:${clr};">
@@ -296,42 +356,44 @@
                 <div class="symbol">${el.symbol}</div>
                 <div class="name">${el.name}</div>
               </div>
-              <div class="flip-card-back" style="background-color:${clr}">
+              <div class="flip-card-back" style="background-color:${clr};">
                 ${el.name}<br>#${el.number}
               </div>
-            </div>
-          `;
-          card.addEventListener("mouseenter", ()=>{
+            </div>`;
+
+          card.addEventListener('mouseenter', () => {
             if (!lockedElement) populateInfo(el);
           });
-          card.addEventListener("mouseleave", ()=>{
+          card.addEventListener('mouseleave', () => {
             if (!lockedElement) resetInfo();
           });
-          card.addEventListener("click", e => {
+
+          card.addEventListener('click', e => {
             const selected = document.querySelector('.flip-card.selected');
             if (lockedElement && lockedElement.number === el.number) {
               lockedElement = null;
-              card.classList.remove("selected");
+              card.classList.remove('selected');
               resetInfo();
             } else {
-              if (selected) selected.classList.remove("selected");
+              if (selected) selected.classList.remove('selected');
               lockedElement = el;
-              card.classList.add("selected");
+              card.classList.add('selected');
               populateInfo(el);
             }
             e.stopPropagation();
           });
+
           table.appendChild(card);
         });
 
-        document.addEventListener("click", () => {
+        document.addEventListener('click', () => {
           const selected = document.querySelector('.flip-card.selected');
-          if (selected) selected.classList.remove("selected");
+          if (selected) selected.classList.remove('selected');
           lockedElement = null;
           resetInfo();
         });
       })
-      .catch(err=>{
+      .catch(err => {
         console.error(err);
         alert('Failed to load element data.');
       });
