--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     .info-name {
       font-size: 22px;
       font-weight: 700;
-      color: #505871 !important;
+      color: white !important;
       padding: 8px 16px;
       border-radius: 6px;
       background-color: rgba(255,255,255,0.2);
