--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     
 
     <div class="percent-description">
-      <em>Hover over each percentage to learn more about its impact.</em><br><br>
+      <em>Hover over each Category to learn more about its impact.</em><br><br>
       The Table is organized into five individual, yet fluid categories: Medical Care, Environment, Individual Behavior, Genetics and Biology, and Socio-economic Circumstances. Based on current public health research and consensus, each is ranked by its estimated percentage influence on overall health. These rankings are supported by a synthesis of epidemiological studies, population health data, and reports from institutions such as the CDC, WHO, and NIH, which analyze the relative impact of social, behavioral, environmental, genetic, and healthcare factors on health outcomes and life expectancy.
     </div>
   </div>
