--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   background-color: rgba(255,255,255,0.2);
   box-shadow: 0 1px 3px rgba(0,0,0,0.2);
   text-align: center;
-  align-self: center;
+  align-self: flex-end;
 }
 
 
@@ -215,7 +215,7 @@
 
 
     .percentages .category {
-      font-size: 18px;
+      font-size: 24px;
       font-weight: bold;
       padding: 8px 12px;
       border-radius: 8px;
