--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
       margin-bottom: 30px;
       padding: 0 60px;
     }
+    .subtext2 {
+  font-size: 24px;
+  color: #505871;
+  margin-bottom: 30px;
+  padding: 0 40px;
+  text-align: left;
+  width: 1955px;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
 
     .container {
       display: flex;
@@ -262,8 +276,12 @@
 </head>
 <body>
   <h1>Periodic Table of Health Elements&trade;</h1>
-  <div class="subtext">Your Innovation GPS for Health Transformation
-  </div>
+  <div class="subtext">Your Innovation GPS for Health Transformation<br></div>
+  <div class="subtext2">Just like the periodic table in science organizes the building blocks of matter, DHIT’s Periodic Table of Health Elements organizes the building blocks of health innovation.
+
+    It’s designed to help communities, health systems, and innovators quickly identify their current state, discover what’s missing, and design the next steps.
+    
+    Each “element” represents a critical factor for digital health transformation, from trust and access to infrastructure and insights. The table makes complex systems simple, helping to align, prioritize, and act.</div>
   <div class="container">
     <div class="table" id="health-table"></div>
 
