--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       text-align: center;
       background-color: #f9f9f9;
       margin: 20px;
-      transform: scale(0.5);
+      zoom: 50%;
       transform-origin: top center;
     }
 
