--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       font-weight: bold;
       padding: 8px 12px;
       border-radius: 8px;
-      color: white;
+      color: white !important;
       white-space: nowrap;
     }
     .percentages-wrapper {
@@ -277,8 +277,6 @@
   </style>
 </head>
 <body>
-  <h1>Periodic Table of Health Elements&trade;</h1>
-  <div class="subtext">Your Innovation GPS for Health Transformation<br></div>
   <div class="container">
     <div class="table" id="health-table"></div>
 
@@ -292,10 +290,6 @@
         <div id="info-example-label" class="info-example-label">Example</div>
         <div id="info-example" class="info-example"></div>
       </div>
-    </div>
-    <div class="percent-description">
-      <em>Hover over each category to learn more about its impact.</em><br><br>
-      The Table is organized into five individual, yet fluid categories: Medical Care, Environment, Individual Behavior, Genetics and Biology, and Socio-economic Circumstances. Based on current public health research and consensus, each is ranked by its estimated percentage influence on overall health. These rankings are supported by a synthesis of epidemiological studies, population health data, and reports from institutions such as the CDC, WHO, and NIH, which analyze the relative impact of social, behavioral, environmental, genetic, and healthcare factors on health outcomes and life expectancy.
     </div>
     <div class="percentages-wrapper">
       <div class="percentages">
@@ -371,19 +365,6 @@ const rowsMap = {
   genetics: "#f7f4ff",
   socio: "#fee6e3"
 };
-    function darkenColor(hex, percent) {
-  const num = parseInt(hex.replace('#',''), 16);
-  const amt = Math.round(2.55 * percent);
-  const R = (num >> 16) - amt;
-  const G = (num >> 8 & 0x00FF) - amt;
-  const B = (num & 0x0000FF) - amt;
-  return '#' + (
-    0x1000000 +
-    (Math.max(0,R)<<16) +
-    (Math.max(0,G)<<8) +
-    Math.max(0,B)
-  ).toString(16).slice(1);
-}
 
 
     function normCat(raw) {
@@ -417,7 +398,7 @@ const rowsMap = {
   nameBox.style.boxShadow = '0 1px 3px rgba(0,0,0,0.2)';
   nameBox.style.padding = '8px 16px';
   nameBox.style.borderRadius = '6px';
-  nameBox.style.color = '#505871';
+  nameBox.style.color = '#FFFFFF';
 
   document.getElementById('info-example-label').textContent = 'Example';
   document.getElementById('info-example').textContent = el.example1;
@@ -454,7 +435,7 @@ resetInfo();
         elements.forEach(el => {
           const key = normCat(el.category);
           const clr = categoryColors[key];
-          const clr2 = hoverColors[key]
+          const clr2 = categoryColors[key]
           const card = document.createElement('div');
           card.className = 'flip-card';
           card.style.gridColumn = getColumn(el.number);
